# printphys

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  calibration_datapoint.md  material_request.md
.github/workflows/: ci.yml
docs/: accuracy.md  index.md  quickstart.md
examples/: README.md  basic_usage.py  custom_material.yaml  pybullet_check.py
src/printphys/: __init__.py  analyze.py  cli.py  core.py  settings.py
src/printphys/backends/: __init__.py  gcode.py  voxel.py
src/printphys/export/: __init__.py  mjcf.py  sdf.py  urdf.py
src/printphys/materials/: __init__.py  abs.yaml  asa.yaml  petg.yaml  pla.yaml  tpu.yaml
tests/: conftest.py  test_cli.py  test_core.py  test_export.py  test_gcode_backend.py  test_materials.py  test_settings.py  test_slicer_integration.py  test_voxel_backend.py
validation/: README.md
validation/lb04-xbox-bumper/: README.md
